removed obsolete DSL elements

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -7,7 +7,6 @@ MostDslValidator.ActionNeedsName=Die Aktion muss einen Namen haben.
 MostDslValidator.ApplicationEmailAddressIsInvalid=Der Wert für die E-Mail-Adresse der Anwendung muss eine gültige E-Mail-Adresse sein.
 MostDslValidator.ApplicationHasHighDataObjectAmount=Die Anzahl der Datenobjekte wird recht hoch. Vielleicht macht es Sinn das Modell in zwei einzelne Anwendungen aufzuteilen.
 MostDslValidator.ApplicationHasMultipleLeadingEntities=Die Anwendung darf nur eine als führend markierte Entität beinhalten.
-MostDslValidator.ApplicationHasObsoleteSettingsContainer=Einstellungscontainer sind veraltet. Statt dessen konfiguriere Deine Generatoreinstellungen direkt bei der Anwendung.
 MostDslValidator.ApplicationHasNoLeadingEntity=Die Anwendung benötigt eine als führend markierte Entität.
 MostDslValidator.ApplicationImportMinVersionIsInvalid=Die minimale Version muss dem Muster x.y.z entsprechen.
 MostDslValidator.ApplicationImportMinVersionMustNotBeGreaterThanMaxVersion=Die minimale Version darf nicht größer sein als die maximale Version.
@@ -42,6 +41,7 @@ MostDslValidator.DataObjectDoesNotNeedIdFields=Entferne ID-Felder... Du brauchst
 MostDslValidator.DataObjectDoesNotNeedPrimaryKeyField=Du brauchst ein Feld nicht als primär zu markieren, dies wird automatisch erledigt.
 MostDslValidator.DataObjectFieldsMustNotBeTooLarge=Die Länge aller Felder des Datenobjekts darf nicht größer als 21845 sein.
 MostDslValidator.DataObjectNameMustBeLonger=Der Name des Datenobjekts muss eine Länge von mindestens zwei Zeichen haben.
+MostDslValidator.DataObjectNameMustNotBeConfig=Das Datenobjekt darf nicht config heißen.
 MostDslValidator.DataObjectNameMustNotBeReserved=Der Name des Datenobjekts ist ein reservierter Bezeichner
 MostDslValidator.DataObjectNameMustNotContainUnderscores=Der Name des Datenobjekts darf keine Unterstriche enthalten, bitte umbenennen in 
 MostDslValidator.DataObjectNameMustNotEqualApplication=Ein Datenobjekt darf nicht den gleichen Namen haben wie die Anwendung.
@@ -97,10 +97,6 @@ MostDslValidator.EntityIndexNeedsName=Jeder Index muss einen Namen haben.
 MostDslValidator.EntityIpTraceableNeedsChangeTriggerReference=Das IpTraceable Change Trigger Feld muss den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
 MostDslValidator.EntityIpTraceableNeedsValidChangeTriggerReference=Das IpTraceable Change Trigger Feld muss workflowState, den Namen eines Feldes oder einer eingehenden Beziehung (property.field) referenzieren.
 MostDslValidator.EntityLoggableNeedsVersionField=Entitäten mit Loggable benötigen ein Feld mit dem aktivierten Attribut version.
-MostDslValidator.EntityMetaDataMustNotContainReserved=Entitäten mit Meta-Daten haben ein zusätzliches Feld zur Referenzierung derselben
-MostDslValidator.EntityMetaDataMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
-MostDslValidator.EntityMetaDataMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
-MostDslValidator.EntityMetaDataMustNotContainReservedTarget=Daher darf Deine Referenz diesen Ziel-Alias nicht enthalten.
 MostDslValidator.EntityMustNotHaveMultipleDeleteActions=Es darf nicht mehr als eine Delete-Aktion in einer Entität geben.
 MostDslValidator.EntityMustNotHaveMultipleDisplayActions=Es darf nicht mehr als eine Display-Aktion in einer Entität geben.
 MostDslValidator.EntityMustNotHaveMultipleEditActions=Es darf nicht mehr als eine Edit-Aktion in einer Entität geben.
@@ -197,7 +193,6 @@ MostDslValidator.FieldStringLengthNotLargeEnoughForLocale=Die String-Länge für S
 MostDslValidator.FieldStringLengthNotLargeEnoughForTimezone=Die String-Länge für Zeitzonen muss mindestens 30 Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForUuid=Die String-Länge für UUIDs muss mindestens 36 Zeichen betragen.
 MostDslValidator.FieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eine spezielle Semantik haben (Rolle, ISBN, ISSN, IP-Adresse).
-MostDslValidator.FieldStringNospaceDeprecated=Die nospace-Eigenschaft ist veraltet. Verwende den regexp-Validator statt dessen, sofern nötig.
 MostDslValidator.FieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslValidator.FieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
 MostDslValidator.FieldUploadInvalidImageDimensions=Entweder Quadrat- oder Querformat- oder Hochformat-Bilder müssen erlaubt sein.
