--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -112,7 +112,10 @@ MostDslValidator.EntityNeedsAction=Jede Entität muss mindestens eine Aktion enth
 MostDslValidator.EntityNeedsNameMultiple=Jede Entität muss einen Namen für mehrere Instanzen haben.
 MostDslValidator.EntityOptimisticLockingNeedsVersionField=Entitäten mit optimistischem Locking müssen ein Feld enthalten, das als Versionsfeld deklariert ist.
 MostDslValidator.EntityOwnerPermissionWithoutStandardFields=Entitäten mit Owner Permissions müssen die Standardfelder aktivieren.
-MostDslValidator.EntitySluggableMustNotIncludeSlugField=Entitäten mit Sluggable-Erweiterung können kein Feld namens slug enthalten.
+MostDslValidator.EntitySluggableMustNotContainReserved=Entitäten mit Slug-Feldern haben ein zusätzliches Feld für den Permalink
+MostDslValidator.EntitySluggableMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
+MostDslValidator.EntitySluggableMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
+MostDslValidator.EntitySluggableMustNotContainReservedTarget=Daher darf Deine Referenz diesen Ziel-Alias nicht enthalten.
 MostDslValidator.EntitySluggablePositionsMustBeUnique=Die Werte für die Sluggable-Position müssen eindeutig pro Entität sein.
 MostDslValidator.EntitySortableFieldMustNotEqualSortableGroup=Die Sortable-Position darf nicht gleichzeitig die Sortable-Gruppe sein.
 MostDslValidator.EntitySortableGroupNeedsSortablePosition=Es wird ein weiteres Feld als Sortable-Position benötigt, damit die Sortable-Gruppe funktioniert.
