added validation constraints

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -82,7 +82,6 @@ MostDslValidator.EntityHasNoDisplayPattern=Die Entität benötigt ein Anzeigemuste
 MostDslValidator.EntityHierarchyMustHaveSameDiscriminatorColumn=Alle Vererbungsbeziehungen innerhalb einer Klassenhierarchie müssen die gleiche Discriminator-Column haben.
 MostDslValidator.EntityHierarchyMustHaveSameInheritanceStrategy=Alle Vererbungsbeziehungen innerhalb einer Klassenhierarchie müssen die gleiche Vererbungsstrategie haben.
 MostDslValidator.EntityHierarchyMustHaveSameTrackingPolicy=Alle Entitäten innerhalb einer Klassenhierarchie müssen die gleiche Change Tracking Policy haben.
-MostDslValidator.EntityHierarchyMustNotHaveFieldsWithSameName=Alle Entitäten innerhalb einer Klassenhierarchie dürfen nicht ein Feld mit gleichem Namen haben.
 MostDslValidator.EntityIndexItemNameMustBeUnique=Die Namen der Index-Einträge müssen eindeutig pro Index sein.
 MostDslValidator.EntityIndexItemNameMustReferenceEntityField=Jeder Index-Eintrag muss den gleichen Namen haben wie das referenzierte Feld der Entität.
 MostDslValidator.EntityIndexItemNeedsIndex=Der Index-Eintrag muss einem Index zugewiesen werden.
@@ -191,6 +190,8 @@ MostDslValidator.FieldStringLengthNotLargeEnoughForCurrency=Die String-Länge für
 MostDslValidator.FieldStringLengthNotLargeEnoughForIban=Die String-Länge für IBAN-Nummern muss mindestens 34 Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForIpAddress4=Die String-Länge für IPv4-Adressen muss mindestens 15 Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForIpAddress6=Die String-Länge für IPv6-Adressen muss mindestens 39 Zeichen betragen.
+MostDslValidator.FieldStringLengthNotLargeEnoughForIsbn=Die String-Länge für ISBN-Nummern muss mindestens 17 Zeichen betragen.
+MostDslValidator.FieldStringLengthNotLargeEnoughForIssn=Die String-Länge für ISSN-Nummern muss mindestens neun Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForLanguage=Die String-Länge für Sprachen muss mindestens sieben Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForLocale=Die String-Länge für Sprachumgebungen muss mindestens fünf Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForTimezone=Die String-Länge für Zeitzonen muss mindestens 30 Zeichen betragen.
@@ -201,6 +202,7 @@ MostDslValidator.FieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-F
 MostDslValidator.FieldUploadInvalidImageDimensions=Entweder Quadrat- oder Querformat- oder Hochformat-Bilder müssen erlaubt sein.
 MostDslValidator.FieldUploadInvalidImageWidth=Die minimale Bildbreite darf nicht größer als die maximale Bildbreite sein.
 MostDslValidator.FieldUploadInvalidImageHeight=Die minimale Bildhöhe darf nicht größer als die maximale Bildhöhe sein.
+MostDslValidator.FieldUploadInvalidImagePixels=Die minimale Pixelmenge darf nicht größer als die maximale Pixelmenge sein.
 MostDslValidator.FieldUploadInvalidImageRatio=Das minimale Seitenverhältnis darf nicht größer als das maximale Seitenverhältnis sein.
 MostDslValidator.FieldUploadMetaFieldMustNotExist=Es darf kein Feld namens {0} existieren, da dies reserviert ist für ein automatisches Feld zur Speicherung der Metadaten für diesen Upload.
 MostDslValidator.FieldUploadNeedsValidFileExtensions=Das Attribut allowedExtensions muss eine kommaseparierte Liste der während dem Upload zu erlaubenden Dateitypen enthalten (Beispiel: gif, jpeg, jpg, png). Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
