--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -142,6 +142,7 @@ MostDslQuickfixProvider.Extend=Erweitern
 MostDslQuickfixProvider.IncreaseFieldLength=Feldlänge erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo12=Feldlänge auf 12 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo15=Feldlänge auf 15 erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo17=Feldlänge auf 17 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo2=Feldlänge auf 2 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo20=Feldlänge auf 20 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo3=Feldlänge auf 3 erhöhen
@@ -151,6 +152,7 @@ MostDslQuickfixProvider.IncreaseFieldLengthTo36=Feldlänge auf 36 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo39=Feldlänge auf 39 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo5=Feldlänge auf 5 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo7=Feldlänge auf 7 erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo9=Feldlänge auf 9 erhöhen
 MostDslQuickfixProvider.IncreaseLengthOfFieldToASensitiveMinimumValue=Länge des Feldes auf einen vernünftigen Minimalwert erhöhen
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordAction=Länge des Namens erhöhen durch Anhängen des Wortes Action
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordField=Länge des Namens erhöhen durch Anhängen des Wortes Field
