--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -2,7 +2,6 @@ MostDslValidator.ActionNameMustBeLonger=Der Name der Aktion muss eine Länge von 
 MostDslValidator.ActionNameMustNotBeReserved=Der Name der Aktion darf nicht Index, View, Display, Edit oder Delete sein.
 MostDslValidator.ActionNameMustNotBeReservedNew=Der Name der Aktion darf nicht New sein, da dies ein reservierter Begriff ist.
 MostDslValidator.ActionNameShouldBeLonger=Der Name der Aktion sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.ActionNeedsEntity=Die Aktion muss einer Entität zugewiesen werden.
 MostDslValidator.ActionNeedsName=Die Aktion muss einen Namen haben.
 MostDslValidator.ApplicationEmailAddressIsInvalid=Der Wert für die E-Mail-Adresse der Anwendung muss eine gültige E-Mail-Adresse sein.
 MostDslValidator.ApplicationHasHighDataObjectAmount=Die Anzahl der Datenobjekte wird recht hoch. Vielleicht macht es Sinn das Modell in zwei einzelne Anwendungen aufzuteilen.
@@ -47,7 +46,6 @@ MostDslValidator.DataObjectNameMustNotContainUnderscores=Der Name des Datenobjek
 MostDslValidator.DataObjectNameMustNotEqualApplication=Ein Datenobjekt darf nicht den gleichen Namen haben wie die Anwendung.
 MostDslValidator.DataObjectNameShouldBeLonger=Der Name des Datenobjekts sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.DataObjectNameShouldStartWithLowerCase=Der Name des Datenobjekts sollte mit einem Kleinbuchstaben beginnen.
-MostDslValidator.DataObjectNeedsApplication=Das Datenobjekt muss einer Anwendung zugewiesen werden.
 MostDslValidator.DataObjectNeedsField=Jedes Datenobjekt muss mindestens ein Feld enthalten oder Felder von einem Elternobjekt erben.
 MostDslValidator.DataObjectNeedsName=Jedes Datenobjekt muss einen Namen haben.
 MostDslValidator.DataObjectsMustBeUnique=Die Namen der Datenobjekte müssen eindeutig sein.
@@ -84,13 +82,11 @@ MostDslValidator.EntityHierarchyMustHaveSameInheritanceStrategy=Alle Vererbungsb
 MostDslValidator.EntityHierarchyMustHaveSameTrackingPolicy=Alle Entitäten innerhalb einer Klassenhierarchie müssen die gleiche Change Tracking Policy haben.
 MostDslValidator.EntityIndexItemNameMustBeUnique=Die Namen der Index-Einträge müssen eindeutig pro Index sein.
 MostDslValidator.EntityIndexItemNameMustReferenceEntityField=Jeder Index-Eintrag muss den gleichen Namen haben wie das referenzierte Feld der Entität.
-MostDslValidator.EntityIndexItemNeedsIndex=Der Index-Eintrag muss einem Index zugewiesen werden.
 MostDslValidator.EntityIndexLengthMustNotBeTooLarge=Die Länge aller Index-Felder darf nicht höher sein als 333.
 MostDslValidator.EntityIndexNameMustBeLonger=Der Name des Index muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.EntityIndexNameMustBeUnique=Die Namen der Indexe müssen eindeutig pro Entität sein.
 MostDslValidator.EntityIndexNameMustNotBeReservedDatabaseKeyword=Der Name des Indexes ist ein reserviertes Datenbank-Schlüsselwort.
 MostDslValidator.EntityIndexNameShouldBeLonger=Der Name des Index sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.EntityIndexNeedsEntity=Der Index muss einer Entität zugewiesen werden.
 MostDslValidator.EntityIndexNeedsItem=Jeder Index muss mindestens einen Eintrag haben, der ein Feld der Entität referenziert.
 MostDslValidator.EntityIndexNeedsName=Jeder Index muss einen Namen haben.
 MostDslValidator.EntityIpTraceableNeedsChangeTriggerReference=Das IpTraceable Change Trigger Feld muss den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
@@ -153,7 +149,8 @@ MostDslValidator.FieldIntegerLengthMustNotBeTooLarge=Die maximale Länge für ein 
 MostDslValidator.FieldIntegerMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
 MostDslValidator.FieldIntegerMustNotActAsPercentageAndRange=Ein Integer-Feld darf nicht gleichzeitig als prozentual und Bereich agieren.
 MostDslValidator.FieldIntegerNeedsValidDefaultValue=Der Standardwert für ein Integer-Feld darf nur Ziffern enthalten.
-MostDslValidator.FieldItemMustBeValidIdentifier=Der Name muss ein gültiger Bezeichner sein (z. B. keine Sonderzeichen, aber Leerzeichen sowie Binde- und Unterstriche sind erlaubt): {0}.
+MostDslValidator.FieldListItemMustBeValidIdentifier=Der Name muss ein gültiger Bezeichner sein (z. B. keine Sonderzeichen, aber Leerzeichen sowie Binde- und Unterstriche sind erlaubt): {0}.
+MostDslValidator.FieldListItemValuesMustBeUnique=Die Werte von Listeneinträgen müssen eindeutig sein.
 MostDslValidator.FieldListMultipleItemAmountSmallerThanMinLimit=Die Anzahl der Listeneinträge darf nicht kleiner sein als die minimale Anzahl erzwungener Werte.
 MostDslValidator.FieldListMultipleItemAmountSmallerThanMaxLimit=Die Anzahl der Listeneinträge darf nicht kleiner sein als die maximale Anzahl erzwungener Werte.
 MostDslValidator.FieldListMultipleMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Werte darf nicht kleiner sein als die minimale Anzahl erzwungener Werte.
@@ -172,7 +169,6 @@ MostDslValidator.FieldNameMustNotBeReservedWorkflow=Der Name des Feldes ist ein 
 MostDslValidator.FieldNameMustNotBeReservedDatabaseKeyword=Der Name des Feldes ist ein reserviertes Datenbank-Schlüsselwort.
 MostDslValidator.FieldNameShouldBeLonger=Der Name des Feldes sollte eine Länge von mindestens drei Zeichen haben.
 MostDslValidator.FieldNameShouldStartWithLowerCase=Der Name des Feldes sollte mit einem Kleinbuchstaben beginnen.
-MostDslValidator.FieldNeedsContainer=Das Feld muss einem Datenobjekt oder einem Variablen-Container zugewiesen werden.
 MostDslValidator.FieldNeedsName=Jedes Feld muss einen Namen haben.
 MostDslValidator.FieldNumberMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
 MostDslValidator.FieldNumberMustNotActAsPercentageAndCurrency=Ein Nummernfeld darf nicht gleichzeitig als prozentual und Währung agieren.
@@ -237,7 +233,6 @@ MostDslValidator.RelationshipJoinNeedsValidTargetFieldType=Das Feld {0} muss ein
 MostDslValidator.RelationshipJoinOneToManyNeedsValidOrderByTargetField=Das Attribut orderBy zeigt auf ein ungültiges Feld der Ziel-Entität.
 MostDslValidator.RelationshipJoinOneToManyTargetMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Einträge auf der Zielseite darf nicht kleiner sein als die minimale Anzahl erzwungener Einträge.
 MostDslValidator.RelationshipJoinSelfNeedsDifferentFieldsForBothSides=Die Selbstbeziehung darf das Feld {0} nicht für sowohl Quelle als auch Ziel referenzieren.
-MostDslValidator.RelationshipNeedsApplication=Die Beziehung muss einer Anwendung zugewiesen werden.
 MostDslValidator.RelationshipNeedsSourceAlias=Jede Beziehung muss ein Quell-Alias haben.
 MostDslValidator.RelationshipNeedsSourceDataObject=Jede Beziehung muss ein Quell-Datenobjekt haben.
 MostDslValidator.RelationshipNeedsTargetAlias=Jede Beziehung muss ein Ziel-Alias haben.
@@ -251,7 +246,6 @@ MostDslValidator.RelationshipTargetAliasesMustNotBeNamedLikeField=Die Ziel-Alias
 MostDslValidator.RelationshipTargetAliasNameMustBeLonger=Das Ziel-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.RelationshipTargetAliasNameShouldBeLonger=Das Ziel-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.VarContainerNameMustBeUnique=Die Namen der Variablen-Container müssen eindeutig sein.
-MostDslValidator.VarContainerNeedsApplication=Der Variablen-Container muss einer Anwendung zugewiesen werden.
 MostDslValidator.VarContainerNeedsName=Jeder Variablen-Container muss einen Namen haben.
 MostDslValidator.VarContainerNeedsVariable=Jeder Variablen-Container muss mindestens eine Variable enthalten.
 MostDslValidator.VarContainerSortPositionMustBeUnique=Die Sortierpositionen der Variablen-Container müssen eindeutig sein.
