minor wording improvements

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -289,7 +289,7 @@ _UI_IntegerField_minValue_description = Minimaler Wert (0 zum Deaktivieren der P
 _UI_IntegerField_maxValue_feature = Max Wert
 _UI_IntegerField_maxValue_description = Maximaler Wert (0 zum Deaktivieren der Prüfung).
 _UI_IntegerField_aggregateFor_feature = Aggregat für
-_UI_IntegerField_aggregateFor_description = Aggregatsfeld: Eins-zu-Viele Target Alias und Feldname (Syntax: views#amount) was den Generator dazu veranlasst spezielle Methoden zur Aggregation zu erstellen.
+_UI_IntegerField_aggregateFor_description = Aggregatsfeld: Eins-zu-Viele Target Alias und Feldname (Syntax: views.amount), was den Generator dazu veranlasst spezielle Methoden zur Aggregation zu erstellen.
 _UI_IntegerField_percentage_feature = Prozentual
 _UI_IntegerField_percentage_description = Ob dieses Feld einen prozentualen Wert repräsentiert oder nicht.
 _UI_IntegerField_range_feature = Bereich
