--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -91,7 +91,7 @@ MostDslValidator.EntityIndexNeedsItem=Jeder Index muss mindestens einen Eintrag 
 MostDslValidator.EntityIndexNeedsName=Jeder Index muss einen Namen haben.
 MostDslValidator.EntityIpTraceableNeedsChangeTriggerReference=Das IpTraceable Change Trigger Feld muss den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
 MostDslValidator.EntityIpTraceableNeedsValidChangeTriggerReference=Das IpTraceable Change Trigger Feld muss workflowState, den Namen eines Feldes oder einer eingehenden Beziehung (property.field) referenzieren.
-MostDslValidator.EntityLoggableNeedsVersionField=Entitäten mit Loggable benötigen ein Feld mit dem aktivierten Attribut version.
+MostDslValidator.EntityLoggableNeedsVersionField=Entitäten mit Loggable benötigen ein Integer-Feld mit dem aktivierten Attribut version.
 MostDslValidator.EntityMustNotHaveMultipleDeleteActions=Es darf nicht mehr als eine Delete-Aktion in einer Entität geben.
 MostDslValidator.EntityMustNotHaveMultipleDisplayActions=Es darf nicht mehr als eine Display-Aktion in einer Entität geben.
 MostDslValidator.EntityMustNotHaveMultipleEditActions=Es darf nicht mehr als eine Edit-Aktion in einer Entität geben.
@@ -133,7 +133,7 @@ MostDslValidator.EntityWithArchiveRequiresEndDate=Entitäten mit einem Archiv müs
 MostDslValidator.EntityWithEnhancedWorkflowNeedsStandardFields=Entitäten mit erweiterten Workflows benötigen Standardfelder zur Identifikationd es Erstellers.
 MostDslValidator.FieldAggregateNeedsLocking=Entitäten mit einem Aggregat-Feld sollten eine Locking-Strategie nutzen (optimistisches oder pessimistisches Lesen).
 MostDslValidator.FieldAggregateNeedsValidRelation=Aggregat-Felder funktionieren nur in Kombination mit einer ausgehenden und bidirektionalen Eins-zu-Viele-Beziehung mit persist-Kaskade.
-MostDslValidator.FieldAggregateNeedsValidSyntax=Die Benennung des aggregateFor-Attributes muss der Syntax targetAlias\#targetFieldName folgen (zum Beispiel views\#amount).
+MostDslValidator.FieldAggregateNeedsValidSyntax=Die Benennung des aggregateFor-Attributes muss der Syntax targetAlias.targetFieldName folgen (zum Beispiel views.amount).
 MostDslValidator.FieldArrayMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Einträge darf nicht kleiner sein als die minimale Anzahl erzwungener Einträge.
 MostDslValidator.FieldDateNeedsValidDefaultValue=Der Standardwert für ein Datums-Feld muss dem Muster YYYY-MM-DD entsprechen oder now lauten.
 MostDslValidator.FieldDateTimeInvalidStartTime=Zeitfelder dürfen nicht als Startdatum fungieren.
