--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -149,7 +149,7 @@ MostDslValidator.FieldIntegerLengthMustNotBeTooLarge=Die maximale Länge für ein 
 MostDslValidator.FieldIntegerMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
 MostDslValidator.FieldIntegerMustNotActAsPercentageAndRange=Ein Integer-Feld darf nicht gleichzeitig als prozentual und Bereich agieren.
 MostDslValidator.FieldIntegerNeedsValidDefaultValue=Der Standardwert für ein Integer-Feld darf nur Ziffern enthalten.
-MostDslValidator.FieldListItemMustBeValidIdentifier=Der Name muss ein gültiger Bezeichner sein (z. B. keine Sonderzeichen, aber Leerzeichen sowie Binde- und Unterstriche sind erlaubt): {0}.
+MostDslValidator.FieldListItemMustBeValidIdentifier=Der Name muss ein gültiger Bezeichner sein (z. B. keine Sonderzeichen, aber Leerzeichen, Punkte, Kommas, runde Klammern, Schrägstriche sowie Binde- und Unterstriche sind erlaubt): {0}.
 MostDslValidator.FieldListItemValuesMustBeUnique=Die Werte von Listeneinträgen müssen eindeutig sein.
 MostDslValidator.FieldListMultipleItemAmountSmallerThanMinLimit=Die Anzahl der Listeneinträge darf nicht kleiner sein als die minimale Anzahl erzwungener Werte.
 MostDslValidator.FieldListMultipleItemAmountSmallerThanMaxLimit=Die Anzahl der Listeneinträge darf nicht kleiner sein als die maximale Anzahl erzwungener Werte.
