added patreon references

--- a/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -73,6 +73,9 @@ command.help.help.description=Das ModuleStudio-Handbuch öffnen
 command.help.search.name=Suche
 command.help.search.mnemonic=S
 command.help.search.description=Die Hilfe durchsuchen
+command.help.patreon.name=Patreon
+command.help.patreon.mnemonic=P
+command.help.patreon.description=Werde ein Patron
 command.problemview.showinhidden=Anzeigen in versteckt
 
 wizard.category.modulestudio=ModuleStudio
