--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -27,6 +27,7 @@ MostDslValidator.ApplicationPrefixIsInvalidIdentifier=Das Präfix muss ein gültig
 MostDslValidator.ApplicationPrefixMustBeLonger=Das Präfix der Anwendung muss eine Länge von mindestens drei Zeichen haben.
 MostDslValidator.ApplicationPrefixShouldBeLonger=Das Präfix der Anwendung sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.ApplicationUrlIsInvalid=Der Wert für die URL der Anwendung muss eine gültige URL sein.
+MostDslValidator.ApplicationTargetVersionIsDeprecated=Die Core-Zielversion ist veraltet und wird in einer zukünftigen Version entfernt. Am  besten bald upgraden.
 MostDslValidator.ApplicationVendorIsInvalidIdentifier=Der Anbieter muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen).
 MostDslValidator.ApplicationVendorMustStartWithCapital=Der Anbieter der Anwendung muss mit einem Großbuchstaben beginnen, bitte benenne ihn um in 
 MostDslValidator.ApplicationVersionIsInvalid=Die Version der Anwendung muss dem Muster x.y.z entsprechen.
