updated sponsor link

--- a/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages_de.properties
@@ -45,7 +45,7 @@ GenerateHandler_GeneralExceptionMessage=Während des Workflows ist eine allgemein
 GenerateHandler_ErrorDuringObservingProgress=Fehler beim Beobachten des Generierungsfortschritts
 GenerateHandler_GenerationDone=Generierung abgeschlossen
 GenerateHandler_ArtifactsGenerated=Deine Artefakte wurden erfolgreich generiert.
-GenerateHandler_BecomePatron=Dieses Projekt hat Dir geholfen und Du möchtest es unterstützen? <a href="https://www.patreon.com/guite">Werde ein Patron!</a>
+GenerateHandler_BecomeSponsor=Dieses Projekt hat Dir geholfen und Du möchtest es unterstützen? <a href="https://github.com/sponsors/Guite">Werde ein Sponsor!</a>
 ImportModelHandler_SelectInputFile=Eingabedatei wählen
 ImportModelHandler_ErrorDuringImport=Fehler beim Import
 ImportModelHandler_AnErrorOccurredDuringImport=Während des Imports ist ein Fehler aufgetreten.
