core-3 related changes

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -145,6 +145,8 @@ MostDslValidator.FieldDateTimeNeedsValidDefaultValue=Der Standardwert für ein Ze
 MostDslValidator.FieldDateTimeOnlyOneEndDate=Pro Entität darf nur ein Feld ein Enddatum repräsentieren.
 MostDslValidator.FieldDateTimeOnlyOneStartDate=Pro Entität darf nur ein Feld ein Startdatum repräsentieren.
 MostDslValidator.FieldDefaultValueTooLong=Der Standardwert ist zu lang für die angegebene Feldlänge.
+MostDslValidator.FieldEmailCheckMxIsDeprecated=Die Eigenschaft checkMX ist veraltet und wird in einer zukünftigen Version entfernt. Bitte setze sie zurück.
+MostDslValidator.FieldEmailCheckHostIsDeprecated=Die Eigenschaft checkHost ist veraltet und wird in einer zukünftigen Version entfernt. Bitte setze sie zurück.
 MostDslValidator.FieldEmailNeedsValidDefaultValue=Der Standardwert für ein E-Mail-Feld muss eine gültige E-Mail-Adresse sein.
 MostDslValidator.FieldIntegerLengthMustNotBeTooLarge=Die maximale Länge für ein Integer-Feld ist 18.
 MostDslValidator.FieldIntegerMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
@@ -203,6 +205,7 @@ MostDslValidator.FieldUploadInvalidImagePixels=Die minimale Pixelmenge darf nich
 MostDslValidator.FieldUploadInvalidImageRatio=Das minimale Seitenverhältnis darf nicht größer als das maximale Seitenverhältnis sein.
 MostDslValidator.FieldUploadMetaFieldMustNotExist=Es darf kein Feld namens {0} existieren, da dies reserviert ist für ein automatisches Feld zur Speicherung der Metadaten für diesen Upload.
 MostDslValidator.FieldUploadNeedsValidFileExtensions=Das Attribut allowedExtensions muss eine kommaseparierte Liste der während dem Upload zu erlaubenden Dateitypen enthalten (Beispiel: gif, jpeg, jpg, png). Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
+MostDslValidator.FieldUrlCheckDnsIsDeprecated=Die Eigenschaft checkDNS ist veraltet und wird in einer zukünftigen Version entfernt. Bitte setze sie zurück.
 MostDslValidator.FieldUrlNeedsValidDefaultValue=Der Standardwert für ein URL-Feld muss eine gültige URL sein.
 MostDslValidator.FieldVersionCanNotBePrimaryKey=Das version-Attribut kann nicht mit einem Primärschlüssel kombiniert werden.
 MostDslValidator.FieldVersionNeedsOptimisticLocking=Entitäten mit einem Versions-Feld müssen optimistisches Locking verwenden.
