--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -239,6 +239,7 @@ MostDslQuickfixProvider.UnsetAllEndDatesExceptThisOne=Alle Enddatum-Flags außer 
 MostDslQuickfixProvider.UnsetAllSortablePositionFlagsExceptTheFirstOne=Alle sortable position-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider.UnsetAllStartDatesExceptThisOne=Alle Startdatum-Flags außer diesem zurücksetzen
 MostDslQuickfixProvider.UnsetAllVersionFlagsExceptThisOne=Alle version-Flags außer diesem zurücksetzen
+MostDslQuickfixProvider.UnsetDeprecatedProperty=Die veraltete Eigenschaft zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptIsbn=Alle Flags außer isbn zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptIssn=Alle Flags außer issn zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptIpAddress=Alle Flags außer ip address zurücksetzen
