added support for configurable email validation mode in Zikula 3

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -354,6 +354,8 @@ _UI_EmailField_checkMX_feature = MX-Check
 _UI_EmailField_checkMX_description = Ob die Validität des MX-Records des gegebenen E-Mail-Hosts geprüft wird.
 _UI_EmailField_checkHost_feature = Host-Check
 _UI_EmailField_checkHost_description = Ob die Validität des MX- oder A- oder AAAA-Records des gegebenen E-Mail-Hosts geprüft wird.
+_UI_EmailField_validationMode_feature = Validierungsmodus
+_UI_EmailField_validationMode_description = Definiert das Muster, gegen das die E-Mail-Adresse geprüft wird.
 _UI_UrlField_length_feature = Länge
 _UI_UrlField_length_description = Die Länge dieses Feldes.
 _UI_UrlField_checkDNS_feature = DNS-Check
@@ -576,6 +578,8 @@ _UI_CoreVersion_ZK20_literal = ZK20
 _UI_CoreVersion_ZK2DEV_literal = ZK2DEV
 _UI_CoreVersion_ZK15_literal = ZK15
 _UI_CoreVersion_ZK15DEV_literal = ZK15DEV
+_UI_CoreVersion_ZK30_literal = ZK30
+_UI_CoreVersion_ZK3DEV_literal = ZK3DEV
 _UI_ItemActionsPosition_NONE_literal = NONE
 _UI_ItemActionsPosition_START_literal = START
 _UI_ItemActionsPosition_END_literal = END
@@ -640,6 +644,9 @@ _UI_EntityBlameableType_NONE_literal = NONE
 _UI_EntityBlameableType_UPDATE_literal = UPDATE
 _UI_EntityBlameableType_CREATE_literal = CREATE
 _UI_EntityBlameableType_CHANGE_literal = CHANGE
+_UI_EmailValidationMode_LOOSE_literal = LOOSE
+_UI_EmailValidationMode_STRICT_literal = STRICT
+_UI_EmailValidationMode_HTML5_literal = HTML5
 _UI_UploadNamingScheme_ORIGINALWITHCOUNTER_literal = ORIGINALWITHCOUNTER
 _UI_UploadNamingScheme_RANDOMCHECKSUM_literal = RANDOMCHECKSUM
 _UI_UploadNamingScheme_FIELDNAMEWITHCOUNTER_literal = FIELDNAMEWITHCOUNTER
