added support for string fields with a week number role in zk3

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -623,6 +623,7 @@ _UI_StringRole_PASSWORD_literal = PASSWORD
 _UI_StringRole_PHONE_NUMBER_literal = PHONE_NUMBER
 _UI_StringRole_TIME_ZONE_literal = TIME_ZONE
 _UI_StringRole_UUID_literal = UUID
+_UI_StringRole_WEEK_literal = WEEK
 _UI_IpAddressScope_NONE_literal = NONE
 _UI_IpAddressScope_IP4_literal = IP4
 _UI_IpAddressScope_IP6_literal = IP6
