--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -193,8 +193,10 @@ MostDslValidator.FieldStringLengthNotLargeEnoughForIsbn=Die String-Länge für ISB
 MostDslValidator.FieldStringLengthNotLargeEnoughForIssn=Die String-Länge für ISSN-Nummern muss mindestens neun Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForLanguage=Die String-Länge für Sprachen muss mindestens sieben Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForLocale=Die String-Länge für Sprachumgebungen muss mindestens fünf Zeichen betragen.
+MostDslValidator.FieldStringLengthNotLargeEnoughForPhone=Die String-Länge für Telefonnummern muss mindestens 8 Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForTimezone=Die String-Länge für Zeitzonen muss mindestens 30 Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForUuid=Die String-Länge für UUIDs muss mindestens 36 Zeichen betragen.
+MostDslValidator.FieldStringLengthNotLargeEnoughForWeek=Die String-Länge für Wochen muss mindestens 8 Zeichen betragen.
 MostDslValidator.FieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eine spezielle Semantik haben (Rolle, ISBN, ISSN, IP-Adresse).
 MostDslValidator.FieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslValidator.FieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
