--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -141,6 +141,7 @@ MostDslQuickfixProvider.IncreaseFieldLengthTo36=Feldlänge auf 36 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo39=Feldlänge auf 39 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo5=Feldlänge auf 5 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo7=Feldlänge auf 7 erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo8=Feldlänge auf 8 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo9=Feldlänge auf 9 erhöhen
 MostDslQuickfixProvider.IncreaseLengthOfFieldToASensitiveMinimumValue=Länge des Feldes auf einen vernünftigen Minimalwert erhöhen
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordAction=Länge des Namens erhöhen durch Anhängen des Wortes Action
