added support for icon fields in zk3

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -187,6 +187,7 @@ MostDslValidator.FieldStringLengthNotLargeEnoughForCountry=Die String-Länge für 
 MostDslValidator.FieldStringLengthNotLargeEnoughForCreditCard=Die String-Länge für Kreditkartennummern muss mindestens 20 Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForCurrency=Die String-Länge für Währungscodes muss mindestens drei Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForIban=Die String-Länge für IBAN-Nummern muss mindestens 34 Zeichen betragen.
+MostDslValidator.FieldStringLengthNotLargeEnoughForIcon=Die String-Länge für Icons muss mindestens 50 Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForIpAddress4=Die String-Länge für IPv4-Adressen muss mindestens 15 Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForIpAddress6=Die String-Länge für IPv6-Adressen muss mindestens 39 Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForIsbn=Die String-Länge für ISBN-Nummern muss mindestens 17 Zeichen betragen.
