added support for arbitrary field units

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -284,6 +284,8 @@ _UI_AbstractIntegerField_length_feature = Länge
 _UI_AbstractIntegerField_length_description = Die Länge dieses Feldes.
 _UI_AbstractIntegerField_sortablePosition_feature = Sortable-Position
 _UI_AbstractIntegerField_sortablePosition_description = Ob dieses Feld die Position für die Sortable-Extension speichern soll.
+_UI_IntegerField_unit_feature = Einheit
+_UI_IntegerField_unit_description = Einheit des Feldes.
 _UI_IntegerField_minValue_feature = Min Wert
 _UI_IntegerField_minValue_description = Minimaler Wert (0 zum Deaktivieren der Prüfung).
 _UI_IntegerField_maxValue_feature = Max Wert
@@ -298,6 +300,8 @@ _UI_IntegerField_version_feature = Version
 _UI_IntegerField_version_description = Ob dieses Feld die Version der Entität speichert oder nicht.
 _UI_NumberField_length_feature = Länge
 _UI_NumberField_length_description = Die Länge dieses Feldes.
+_UI_NumberField_unit_feature = Einheit
+_UI_NumberField_unit_description = Einheit des Feldes.
 _UI_NumberField_scale_feature = Skalierung
 _UI_NumberField_scale_description = Die Skalierung.
 _UI_NumberField_aggregationField_feature = Aggregatsfeld
@@ -324,6 +328,8 @@ _UI_AbstractStringField_sluggablePosition_feature = Sluggable-Position
 _UI_AbstractStringField_sluggablePosition_description = Position dieses Feldes im generierten Slug. Ein Wert von 0 steht für keine Berücksichtigung im Slug.
 _UI_StringField_length_feature = Länge
 _UI_StringField_length_description = Die Länge dieses Feldes.
+_UI_StringField_unit_feature = Einheit
+_UI_StringField_unit_description = Einheit des Feldes.
 _UI_StringField_role_feature = Rolle
 _UI_StringField_role_description = Erlaubt die Definition einer semantischen Rolle für dieses Feld.
 _UI_StringField_isbn_feature = Isbn
@@ -617,6 +623,7 @@ _UI_StringRole_CREDIT_CARD_literal = CREDIT_CARD
 _UI_StringRole_CURRENCY_literal = CURRENCY
 _UI_StringRole_DATE_INTERVAL_literal = DATE_INTERVAL
 _UI_StringRole_IBAN_literal = IBAN
+_UI_StringRole_ICON_literal = ICON
 _UI_StringRole_LANGUAGE_literal = LANGUAGE
 _UI_StringRole_LOCALE_literal = LOCALE
 _UI_StringRole_PASSWORD_literal = PASSWORD
