implemented counter functionality

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -298,6 +298,8 @@ _UI_IntegerField_range_feature = Bereich
 _UI_IntegerField_range_description = Ob dieses Feld einen Bereich repräsentiert oder nicht.
 _UI_IntegerField_version_feature = Version
 _UI_IntegerField_version_description = Ob dieses Feld die Version der Entität speichert oder nicht.
+_UI_IntegerField_counter_feature = Zähler
+_UI_IntegerField_counter_description = Ob dieses Feld als Ansichtenzähler agiert oder nicht.
 _UI_NumberField_length_feature = Länge
 _UI_NumberField_length_description = Die Länge dieses Feldes.
 _UI_NumberField_unit_feature = Einheit
